src/Components/Homepage/Homepage.scss
@import '../../sass/variables.scss';
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');

.homepage {
  background-color: $primary-color;
  height: 80vh;
}

.welcome-container{
  // border: 1px solid purple;
  position:relative;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  height:100%;
}

.welcome-txt {
  position: relative;
  z-index: 100;
  width: 50%;
  line-height: 1.3;
  padding: 5%;
  color: $font-color;
  text-align:center;

  h1 {
    font-size: 3rem;
    margin-bottom: 10px;
  }

  h2 {
    font-size: 2rem;
  }
}

//position: relative creates a stacking context. Basically it makes an imaginary z-index which is the "straight-ahead" axis that the user view the screen from, like a layer. 
//I gave the image a position of relative so that its z index is undefined, which puts it as the bottom layer, or something
//I've given the text container a z-index of 100 which essentially makes it the top layer, it's the closest element to the viewer. 
//The top, left, right, and bottom values are the distance the element moves in those directions RELATIVE to it's initial position without any margins, padding etc. 

///notes: make child container for homepage.js that holds the welcome text, img, button, etc.

.homepg-signup-btn-container {
  display: flex;
  flex-direction: row;
  width: 80%;
  align-content: center;
  justify-content: center;
}


.homepg-signup-btn {
  cursor: pointer;
  background: $accent-color-two;
  border: 1px solid black;
  border-radius: 5px;
  color: white;
  font-size: 1.225rem;
  font-weight:200;
  padding: 15px 20px;
  font-family:"Poppins", sans-serif;
  position: relative;
  z-index:100;
  transition:all 300ms ease;
  &:hover{
    font-size:1.5em;
    box-shadow: 4px 6px $secondary-color;
  }
  // font-family:'Sulphur Point', sans-serif;
}

.aliens-img{
  width: 40vw;
  height: auto;
  position: relative;
  right: 25%;
  top: 15%;
  opacity: 0.75;
}

// The maximum width the page can be to have the below rules is 1000px. At 1000px and below, these rules will apply;

@media screen and(max-width: 1000px) {
  .welcome-container{
    align-items:center;
  }
  //at 1000px,  I'm changing the align-items property of the welcome-container

  .welcome-txt {
    width: 80%;
    word-wrap:break-word;
    
    h1 {
      font-size: 1.75rem;
    }

    h2 {
      font-size: 1.25rem;
    }
  }

  .homepg-signup-btn-container{
    margin: 5% 0;
  }

  .homepg-signup-btn{
    font-size: 1.15rem;
    padding: 10px 10px;
  }
  //at 1000px and below, the aliens image won't be position:relative.Just the default, initial
}

@media screen and (max-width:498px){
  .aliens-img{
    position:initial;
  }
  
}

